--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="application-name" content="BIBI">
+    <link rel="apple-touch-icon-precomposed" href="./desktop.png">
     <meta content="width=device-width, initial-scale=1.0,viewport-fit=cover, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <meta http-equiv="Pragma" content="no-cache">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
