--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <link rel="apple-touch-icon-precomposed" href="./desktop.png">
     <meta content="width=device-width, initial-scale=1.0,viewport-fit=cover, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <meta name="theme-color" content="#000000" />
-    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="white"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
